Fix font size and portfolio image spacing

--- a/css/home.css
+++ b/css/home.css
@@ -25,7 +25,6 @@ blockquote {
 blockquote {
   padding-left: 1rem;
   margin-bottom: 0.5rem;
-  font-size: 90%;
   border-left: 1px solid #777;
   font-style: italic;
 }
@@ -141,12 +140,13 @@ main > section {
   width: 100%;
 }
 
+figure svg,
 figure img {
   margin-bottom: 0.5rem;
 }
 
 figcaption {
-  font-size: 80%;
+  font-size: 90%;
 }
 
 figcaption h3 {
@@ -158,6 +158,7 @@ figcaption h3 {
   height: 50px;
   width: 50px;
 }
+
 .portfolio img.screenshot {
   height: 50px;
   width: 88.75px;
